--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
     </fieldset>
 
     <fieldset id="fieldset1" class="fieldset" style="background-color:#eee;">
-        <div id="word" class="tilerack"></div>
+        <div id="build" class="tilerack"></div>
     </fieldset>    
+
+    <span id="msg"></span>
+    <span id="word" style="visibility:hidden;"></span>
+
+    <div id="wordList"></div>
 </body>
 </html>
