--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <div id="rack" class="tilerack"></div>
     </fieldset>
 
+    <input type="text" id="input" />
+
     <fieldset id="fieldset1" class="fieldset" style="background-color:#eee;">
         <div id="build" class="tilerack"></div>
     </fieldset>    
