--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
 
     <fieldset style="margin-top:20px; cursor:default;">
         <legend id="legend0" onclick="loadRack();">
-            Score: 0
+            Words: 0, Letters: 0
         </legend>
         <div id="rack" class="tilerack"></div>
     </fieldset>
 
-    <input type="text" id="input" />
-
     <fieldset id="fieldset1" class="fieldset" style="background-color:#eee;">
+        <legend id="timer"></legend>
         <div id="build" class="tilerack"></div>
     </fieldset>    
 
