--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div id="build" class="tilerack"></div>
     </fieldset>    
 
+    <input type="text" id="keyboard" autofocus></div><br />
     <span id="msg"></span>
     <span id="word" style="visibility:hidden;"></span>
 
