--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div>&nbsp;</div>
     </div>
 
-    <fieldset style="margin-top:20px; cursor:default;">
+    <fieldset style="margin-top:20px; cursor:default;"  onclick="document.getElementById('keyboard').focus()">
         <legend id="legend0" onclick="loadRack();">
             Words: 0, Letters: 0
         </legend>
@@ -31,7 +31,7 @@
         <div id="build" class="tilerack"></div>
     </fieldset>    
 
-    <input type="text" id="keyboard" autofocus></div><br />
+    <input type="text" id="keyboard"></div><br />
     <span id="msg"></span>
     <span id="word" style="visibility:hidden;"></span>
 
