--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="build" class="tilerack"></div>
     </fieldset>    
 
-    <input type="text" id="keyboard"></div><br />
+    <input type="text" id="keyboard" oninput="this.value='';" /><br />
     <span id="msg"></span>
     <span id="word" style="visibility:hidden;"></span>
 
