--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button onclick="share()">Share Score</button>
     </div>
     
-    <span id="msg">test</span>
+    <span id="msg"></span>
 
     <div id="wordList"></div>
 
