--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="header">
         <div>&nbsp;</div>
-        <div><h1>Word Race</h1></div>
+        <div><h1>Word Race</h1><input type="text" id="keyboard" oninput="this.value='';" /></div>
         <div>&nbsp;</div>
     </div>
 
@@ -42,6 +42,5 @@
     <div id="wordList"></div>
 
     <span id="word" style="visibility:hidden;"></span>
-    <br /><input type="text" id="keyboard" oninput="this.value='';" />
 </body>
 </html>
