--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="header">
         <div>&nbsp;</div>
-        <div><h1>Word Race</h1><input type="text" id="keyboard" oninput="this.value='';" /></div>
+        <div><h1>Word Race<input type="text" id="keyboard" oninput="this.value='';" /></h1></div>
         <div>&nbsp;</div>
     </div>
 
