--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 </head>
-<body>
+<body onload="document.getElementById('keyboard').focus()">
     <div class="header">
         <div>&nbsp;</div>
         <div><h1>Word Race<input type="text" id="keyboard" oninput="this.value='';" /></h1></div>
